2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.addin.xml: Bump add-in versions.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.mdp, Makefile.am: Directory reorganization.

2007-11-12  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.cs: If no file is open but one is selected in the tree, use
	  it as reference file for the new entry. Fixes bug #339272.

2007-11-09  Michael Hutchinson <mhutchinson@novell.com> 

	* ChangeLogService.cs, CommitDialogExtensionWidget.cs: Track LoggingService
	  API changes.

2007-10-30  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogService.cs: Fix ChangeLog location problem in
	  single-changelog-per-project mode.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.addin.xml: Bump MD version.

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.mdp: Project file names updated by change in MD path
	  functions.

2007-10-12  Mike Krüger <mkrueger@novell.com> 

	* ChangeLogService.cs, CommitDialogExtensionWidget.cs: Applied changes that
	  were neccassary for to the new FileService.

2007-09-26  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.addin.xml: Add missing identifier for the add-in
	  preferences dialog.

2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.addin.xml: Bump MD version.

2007-09-20  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLogAddIn.addin.xml: Added an Other section in the MD property dialog
	  and moved some options there to avoid too many branches.

2007-09-10  Lluis Sanchez Gual <lluis@novell.com> 

	* CommitDialogExtensionWidget.cs: Regenerate changelog entries after
	  changing the user name and mail options. Fixes bug #82745.

2007-09-04  Michael Hutchinson <MHutchinson@novell.com>

	* ChangeLogAddInOptionPanelWidget.cs: Fix compiler warning.

2007-08-31  Mike Krüger <mkrueger@novell.com> 

	* ProjectOptionPanel.cs, ChangeLogAddIn.cs,