@@ -1,3 +1,11 @@
+2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* gtk-gui/generated.cs,
+	  gtk-gui/MonoDevelop.ChangeLogAddIn.ProjectOptionPanelWidget.cs,
+	  gtk-gui/MonoDevelop.ChangeLogAddIn.ChangeLogAddInOptionPanelWidget.cs,
+	  gtk-gui/MonoDevelop.ChangeLogAddIn.AddLogEntryDialog.cs: Regenerated
+	  gui.
+
 2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* ChangeLogAddIn.addin.xml: Bump add-in versions.
